S28 2294: Swagger Fixes and Pagination (#156)
* Fix: Hide pagination and map vars in swagger ui

* Add pagination for `GET /cases`

* Fix: error when searching by uuid that is not in uuid format

* Add cases search class

* Add pagination to `GET /courts`

* Add pagination to `GET /users`

* Styling